syntax = "proto3";

option go_package = "github.com/mohuishou/protoc-gen-go-gin/example/api/product/app/v1";

package product.app.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// blog service is a blog demo
service BlogService {
	rpc GetArticles(GetArticlesReq) returns (GetArticlesResp) {
		option (google.api.http) = {
			get: "/v1/articles"
			additional_bindings {
				get: "/v1/author/{author_id}/articles"
			}
		};
	}

	rpc CreateArticle(Article) returns (Article) {
		option (google.api.http) = {
			post: "/v1/author/{author_id}/articles"
		};
	}

	// 自定义响应示例：文件下载
	rpc DownloadArticle(DownloadArticleReq) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			get: "/v1/articles/{article_id}/download"
		};
	}

	// 自定义响应示例：XML 输出
	rpc GetArticleXML(GetArticleXMLReq) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			get: "/v1/articles/{article_id}/xml"
		};
	}
}

message GetArticlesReq {
	// @inject_tag: form:"title"
	string title = 1;

	// @inject_tag: form:"page"
	int32 page = 2;

	// @inject_tag: form:"page_size"
	int32 page_size = 3;

	// @inject_tag: form:"author_id" uri:"author_id"
	int32 author_id = 4;
}

message GetArticlesResp {
	int64 total = 1;
	repeated Article articles = 2;
}

message Article {
	string title  = 1;
	string content = 2;
	// @inject_tag: form:"author_id" uri:"author_id"
	int32 author_id = 3;
}

message DownloadArticleReq {
	// @inject_tag: uri:"article_id"
	int32 article_id = 1;
}

message GetArticleXMLReq {
	// @inject_tag: uri:"article_id"
	int32 article_id = 1;
}
